fixed truncate

--- a/app/assets/stylesheets/modals.css.scss
+++ b/app/assets/stylesheets/modals.css.scss
@@ -1,3 +1,7 @@
 .modal-dialog.more-info{
 	width: 75%;
 }
+
+.learn-more {
+	color: blue;
+}
